k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hialt-recall-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8501
    targetPort: 8501
  selector:
    app: hialt-recall
