k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hialt-recall-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: recall.hialt.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hialt-recall-svc
            port:
              number: 8501
